<resources>
    <string name="app_name">CryptoComTest</string>

    <string name="coin">Coin</string>

    <string name="wallet_logo_content">crypto.com  |  DEFI WALLET</string>
    <string name="wallet_scan">Scan</string>
    <string name="wallet_setting">Setting</string>
    <string name="wallet_send">Send</string>
    <string name="wallet_receive">Receive</string>
    <string name="wallet_total_balance">\$ %.2f USD</string>

    <string name="wallet_item_amount_format">%1$.2f %2$s</string>
    <string name="wallet_item_usd_value_format">$%1$.2f</string>

    <string name="defi_content">DeFi page</string>

    <string name="bottom_nav_wallet">Wallet</string>
    <string name="bottom_nav_defi">DeFi</string>
</resources>