<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_default_bg"
    tools:context=".presentation.ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <!-- Info container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/wallet_setting"
            android:src="@android:drawable/ic_menu_manage"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivScan"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/wallet_scan"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvTotalUsd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wallet_total_balance"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/wallet_logo_content"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvTotalUsd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/wallet_logo_content"
            android:src="@drawable/ic_logo"
            android:background="@drawable/bg_circle_blue"
            app:layout_constraintBottom_toBottomOf="@+id/tvLogo"
            app:layout_constraintEnd_toStartOf="@id/tvLogo"
            app:layout_constraintTop_toTopOf="@+id/tvLogo" />

        <LinearLayout
            android:id="@+id/btnSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvTotalUsd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnReceive"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/wallet_send"
                android:src="@android:drawable/ic_menu_send"
                app:tint="@color/white"
                android:backgroundTint="#3E86FF"
                android:background="@drawable/bg_circle_blue"
                android:padding="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_send"
                android:textColor="@android:color/white"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnReceive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvTotalUsd"
            app:layout_constraintStart_toEndOf="@id/btnSend"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/wallet_receive"
                android:src="@android:drawable/ic_input_add"
                app:tint="@color/white"
                android:backgroundTint="#3E86FF"
                android:background="@drawable/bg_circle_blue"
                android:padding="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_receive"
                android:textColor="@android:color/white"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvTotalUsd"
                app:layout_constraintStart_toEndOf="@id/btnSend"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RecyclerView container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rvContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/bg_top_rounded"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWallet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>